--- a/index.css
+++ b/index.css
@@ -102,12 +102,8 @@
   	object-fit: cover;
 }
 .rectangle-section {
-    position: absolute;
-    top: 50%;
-    left: 0;
-    right: 0;
-    transform: translateY(-50%);
     background-color: #edf7fa;
+    width: 100%;
     height: 396px;
 }
 .rectangle-div {
