--- a/index.css
+++ b/index.css
@@ -105,6 +105,7 @@
     background-color: #edf7fa;
     width: 100%;
     height: 396px;
+    margin-top: 20px; /* Adjust as needed */
 }
 .rectangle-div {
   	position: absolute;
