--- a/index.css
+++ b/index.css
@@ -103,7 +103,7 @@
 }
 .rectangle-section {
     background-color: #edf7fa;
-    width: 100vw;
+    width: 100%;
     height: 396px;
 }
 .rectangle-div {
