--- a/index.css
+++ b/index.css
@@ -102,6 +102,7 @@
   	object-fit: cover;
 }
 .rectangle-section {
+    position: relative;
     background-color: #edf7fa;
     width: 100%;
     height: 396px;
