--- a/index.css
+++ b/index.css
@@ -104,7 +104,7 @@
 .rectangle-section {
     position: relative;
     background-color: #edf7fa;
-    width: 100%;
+    width: 100vw;
     height: 396px;
 }
 .rectangle-div {
