--- a/index.css
+++ b/index.css
@@ -102,10 +102,10 @@
   	object-fit: cover;
 }
 .rectangle-section {
-    position: relative;
     background-color: #edf7fa;
-    width: 100vw;
+    width: 100%;
     height: 396px;
+    box-sizing: border-box;
 }
 .rectangle-div {
   	position: absolute;
