--- a/index.css
+++ b/index.css
@@ -106,6 +106,8 @@
     width: 100%;
     height: 396px;
     box-sizing: border-box;
+    position: relative; /* Change from absolute to relative */
+    top: 0; /* Remove the top positioning */
 }
 .rectangle-div {
   	position: absolute;
