--- a/index.css
+++ b/index.css
@@ -102,12 +102,10 @@
   	object-fit: cover;
 }
 .rectangle-section {
-    position: absolute;
-    top: 595px;
-    left: 0;
-    right: 0;
     background-color: #edf7fa;
+    width: 100%;
     height: 396px;
+    box-sizing: border-box;
 }
 .rectangle-div {
   	position: absolute;
