--- a/index.css
+++ b/index.css
@@ -1,26 +1,36 @@
 .home-child {
-      border-radius: 50%;
-      background-color: #edf7fa;
-      width: 243px;
-      height: 243px;
+  	position: absolute;
+  	top: 223px;
+  	left: 755px;
+  	border-radius: 50%;
+  	background-color: #edf7fa;
+  	width: 243px;
+  	height: 243px;
 }
 .home-item {
-      border-radius: 2px;
-      background-color: #ff6464;
-      width: 208px;
-      height: 47px;
+  	position: absolute;
+  	top: 477px;
+  	left: 148px;
+  	border-radius: 2px;
+  	background-color: #ff6464;
+  	width: 208px;
+  	height: 47px;
 }
 .hi-i-am {
   	margin: 0;
 }
 .hi-i-am-container {
-      font-size: 44px;
-      line-height: 60px;
-      font-weight: 700;
-      font-family: inherit;
-      display: inline-block;
-      width: 506px;
-      height: 105px;
+  	margin: 0;
+  	position: absolute;
+  	top: 228px;
+  	left: 148px;
+  	font-size: 44px;
+  	line-height: 60px;
+  	font-weight: 700;
+  	font-family: inherit;
+  	display: inline-block;
+  	width: 506px;
+  	height: 105px;
 }
 .amet-minim-mollit {
   	position: absolute;
@@ -92,12 +102,12 @@
   	object-fit: cover;
 }
 .rectangle-section {
-    position: absolute;
-    top: 595px;
-    left: 0;
-    right: 0;
-    background-color: #edf7fa;
-    height: 396px;
+      position: absolute;
+      top: 595px;
+      left: 0;
+      right: 0;
+      background-color: #edf7fa;
+      height: 396px;
 }
 .rectangle-div {
   	position: absolute;
