--- a/index.css
+++ b/index.css
@@ -1,36 +1,31 @@
+.home-child,
+.home-item,
+.hi-i-am-container {
+  margin-bottom: 20px; /* Add margin if needed */
+}
 .home-child {
-  	position: absolute;
-  	top: 223px;
-  	left: 755px;
-  	border-radius: 50%;
-  	background-color: #edf7fa;
-  	width: 243px;
-  	height: 243px;
+  border-radius: 50%;
+  background-color: #edf7fa;
+  width: 243px;
+  height: 243px;
 }
 .home-item {
-  	position: absolute;
-  	top: 477px;
-  	left: 148px;
-  	border-radius: 2px;
-  	background-color: #ff6464;
-  	width: 208px;
-  	height: 47px;
+  border-radius: 2px;
+  background-color: #ff6464;
+  width: 208px;
+  height: 47px;
 }
 .hi-i-am {
   	margin: 0;
 }
 .hi-i-am-container {
-  	margin: 0;
-  	position: absolute;
-  	top: 228px;
-  	left: 148px;
-  	font-size: 44px;
-  	line-height: 60px;
-  	font-weight: 700;
-  	font-family: inherit;
-  	display: inline-block;
-  	width: 506px;
-  	height: 105px;
+  font-size: 44px;
+  line-height: 60px;
+  font-weight: 700;
+  font-family: inherit;
+  display: inline-block;
+  width: 506px;
+  height: 105px;
 }
 .amet-minim-mollit {
   	position: absolute;
