--- a/styles_v1.css
+++ b/styles_v1.css
@@ -41,7 +41,6 @@ hr {
   display: flex;
   align-items: center;
   padding: 12px 25px;
-  text-decoration: none;
 }
 
 .nav-link span {
@@ -58,142 +57,75 @@ hr {
 }
 
 /* Main content styles */
-
-.main {
+main {
+  height: calc(100vh - 70px);
   display: flex;
+  background-color: #f9f9f9;
+}
+
+.content {
+  background-color: #f9f9f9;
+  width: 100%;
+  height: 100%;
+  padding: 15px 15px;
+  border-top: 1px solid #ddd;
+  overflow-y: scroll;
 }
 
 .videos {
-  padding-left: 16%;
-  padding-right: 1%;
-  padding-bottom: 20px:
-  padding-top: 20px:
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  flex-wrap: wrap;
 }
 
-.video{
+.video {
   width: 270px;
-  margin-bottom: 30px;
+  margin-bottom: 20px; /* Add margin at the bottom to create space */
 }
 
-.video-section {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  grid-column-gap: 15px;
-  grid-row-gap: 30px;
-  margin-top: 10px;
-}
-  
-.video-container .thumb{
+.thumbnail {
   width: 100%;
-  border-radius: 2%;
+  height: 170px;
 }
 
-.video-container .flex-box img{
+.thumbnail img {
+  object-fit: cover;
+  height: 94%;
+  width: 100%;
+}
+.author img {
+  object-fit: cover;
   border-radius: 50%;
-  wight: 35px;
+  height: 40px;
+  width: 40px;
   margin-right: 10px;
-  margin-left: 5px;
 }
 
-.video-container .flex-box{
-  aligh-items: flex-start;
-  margin-top: 5px;
+.details {
+  display: flex;
 }
-
-.video-details {
+ 
+.title {
+  display: flex;
+  flex-direction: column;
+}
+ 
+.title h3 {
+  color: rgb(3, 3, 3);
+  line-height: 18px;
   font-size: 14px;
-  color: #6a6a6a;
+  margin-bottom: 6px;
+}
+ 
+.title a,
+span {
+  text-decoration: none;
+  color: rgb(96, 96, 96);
+  font-size: 12px;
 }
 
-.video-details {
-  font-weight: 600;
-  display: block;
-}
-  
-  .thumbnail {
-    position: relative;
-    display: flex;
-  }
-  
-  .thumbnail::before{
-    content: attr(data-duration);
-    position: absolute;
-    background-color: rgba(0, 0, 0, .85);
-    color: white;
-    right: 5px;
-    bottom: 5px;
-    padding: .1em .3em;
-    border-radius: .3em;
-    font-size: .9em;
-  }
 
-  .thumbnail-image{
-    width: 100%;
-    height: 89%;
-    object-fit: cover;
-    min-width: 250px;
-    min-height: 150px;
-    background-color: #AAA;
-  }
-
-  .video-bottom-section{
-    display: flex;
-    align-items: flex-start;
-    margin-top: 1rem;
-  }
-
-  .channel-icon{
-    margin-right: .75rem;
-    border-radius: 50%;
-    width: 36px;
-    height: 36px;
-    background-color: #AAA;
-  }
-
-  .video-details{
-    display: flex;
-    flex-direction: column;
-  }
-
-  .video-title{
-    font-size: 1.1rem;
-    font-weight: bold;
-    margin-bottom: .5rem;
-    text-decoration: none;
-    color: black;
-  }
-
-  .video-channel-name{
-    margin-bottom: .1rem;
-    text-decoration: none;
-    transition: color 150ms;
-  }
-
-  .video-channel-name:hover{
-    color: #111;
-  }
-
-  .video-channel-name,.vide-metadata{
-    color: #555;
-  }
-
-.video-section-title{
-    grid-column: 1 /-1;
-    margin: -.5rem 0;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 .5rem;
-}
-
-.video-section-title-close{
-    border: none;
-    background: none;
-    padding: 0;
-    font-size: 2rem;
-    color: #555;
-    cursor : pointer;
-}
 /* Search section styles */
 .search {
   display: flex;
@@ -233,23 +165,6 @@ hr {
   border-radius: 2px 0 0 2px;
 }
 
-.content{
-  background-color: white;
-  width: 100%;
-  height: 100%;
-  padding: 15px 15px;
-  bodrder-top: 1px solid #dd;
-  overflow-y: scroll;
-}
-.details{
-  display: flex;
-}
-
-.title{
-  display: flex;
-  flex-direction: column;
-}
-
 /* Styles for the search input when focused */
 input:focus {
   outline: none;
@@ -275,11 +190,6 @@ input:focus {
   cursor: pointer;
 }
 
-main{
-  height: calc(100vh - 70px);
-  display: flex;
-  background: #f9f9f9;
-}
 /* Media query for hiding the sidebar on small screens */
  @media (max-width: 768px) {
     .side-bar {
@@ -288,13 +198,6 @@ main{
     .search {
       display: none;
     }
-   .main {
-    flex-direction: column; /* Change to column layout on small screens */
-  }
-
-  .videos {
-    justify-content: flex-start; /* Align videos to the start on small screens */
-  }
 }
 
   @media (max-width: 900px) {
