--- a/styles_v1.css
+++ b/styles_v1.css
@@ -64,10 +64,9 @@ hr {
 }
 
 .videos {
-  padding-left: 16%;
-  padding-right: 1%;
-  padding-bottom: 20px:
-  padding-top: 20px:
+  display: flex;
+  justify-content: flex-start; /* Align videos to the start horizontally */
+  overflow-x: auto; /* Allow horizontal scrolling if needed */
 }
 
 .video{
@@ -77,10 +76,10 @@ hr {
 
 .video-section {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  grid-column-gap: 15px;
-  grid-row-gap: 30px;
-  margin-top: 10px;
+  grid-template-columns: repeat(auto-fill, minmax(270px, 1fr));
+  gap: 20px;
+  justify-content: flex-start; /* Align videos to the start horizontally */
+  margin: 15px;
 }
   
 .video-container .thumb{
